<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group0">
        <item android:id="@+id/menu_main" android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_menu" />
    </group>
    <group android:id="@+id/group1">
        <item android:id="@+id/menu_highscore" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_highscore" />
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/menu_statistics" android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/menu_statistics" />
    </group>
    <group android:id="@+id/group3">
        <item android:id="@+id/menu_settings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>
    <group android:id="@+id/group4">
        <item android:id="@+id/menu_help" android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>
    <group android:id="@+id/group5">
        <item android:id="@+id/menu_about" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>

</menu>
