<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        tools:context="org.secuso.privacyfriendlymemory.ui.navigation.AboutActivity">
        <ImageView
            android:id="@+id/barcodeLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/privacyfriendlyappslogo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_long" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textFieldVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/version_number" />

            <TextView
                android:id="@+id/textFieldVersionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/textFieldVersion" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textFieldAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/about_author" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textFieldAuthorNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author_names" />

            <TextView
                android:id="@+id/textFieldContributors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_toEndOf="@+id/textFieldAuthorNames"
                android:text="@string/about_author_contributors" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textFieldAffiliation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/about_affiliation"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/secuso_logo_blau_blau" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/privacy_friendly"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/more_info"/>

        <TextView
            android:id="@+id/secusoWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secuso_url"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/githubURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gitrepo_url"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:id="@+id/tuxText"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tux_deck_provided"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="www.androidsoft.org/tux-memory.html"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"/>


        <TextView
            android:id="@+id/animalText"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/animal_deck_provided"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="www.openclipart.org"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"/>

    </LinearLayout>


</ScrollView>